<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_calculadora"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp" />

    <EditText
        android:id="@+id/etPeso"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder_peso"
        android:inputType="numberDecimal"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/etAltura"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:hint="@string/place_holder_altura"
        android:inputType="numberDecimal"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btnCalcularImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/tvResultadoImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btnVolverMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="14sp" />

</LinearLayout>